Finish HW lesson #3

--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    Hello html!
+
+<body style="text-align: center;">
+
+    <p style="display: inline-block; width: fit-content; text-align: left;">
+
+        <a href="https://stackoverflow.com/" style="display: block;">
+            <img src="stackoverflow-tile.svg" alt=""
+                style="width: 30px;">
+            <label>Stackoverflow</label>
+        </a>
+        <a href="https://google.com/" style="display: block;">
+            <img src="Google__G__Logo.svg.png"
+                alt="" style="width: 30px;">
+            <label>Google</label>
+        </a>
+        <a href="https://zoom.us/" style="display: block;">
+            <img src="Zoom-Logo-PNG-Photo.png" alt=""
+                style="width: 30px;">
+            <label>Zoom</label>
+        </a>
+        <a href="https://www.tel-ran.com/" style="display: block;">
+            <img src="telran.jpg" alt="" style="width: 30px;">
+            <label>Tel-Ran</label>
+        </a>
+        <a href="https://dropbox.com/" style="display: block;">
+            <img src="Dropbox_Icon.svg.png" alt="" style="width: 30px;">
+            <label>Dropbox</label>
+        </a>
+
+    </p>
+
 </body>
+
 </html>
