--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <p style="display: inline-block; width: fit-content; text-align: left;">
 
         <a href="https://stackoverflow.com/" style="display: block;">
-            <img src="stackoverflow-tile.svg" alt=""
+            <img src="media/stackoverflow-tile.svg" alt=""
                 style="width: 30px;">
             <label>Stackoverflow</label>
         </a>
         <a href="https://google.com/" style="display: block;">
-            <img src="Google__G__Logo.svg.png"
+            <img src="media/Google__G__Logo.svg.png"
                 alt="" style="width: 30px;">
             <label>Google</label>
         </a>
         <a href="https://zoom.us/" style="display: block;">
-            <img src="Zoom-Logo-PNG-Photo.png" alt=""
+            <img src="media/Zoom-Logo-PNG-Photo.png" alt=""
                 style="width: 30px;">
             <label>Zoom</label>
         </a>
         <a href="https://www.tel-ran.com/" style="display: block;">
-            <img src="telran.jpg" alt="" style="width: 30px;">
+            <img src="media/telran.jpg" alt="" style="width: 30px;">
             <label>Tel-Ran</label>
         </a>
         <a href="https://dropbox.com/" style="display: block;">
-            <img src="Dropbox_Icon.svg.png" alt="" style="width: 30px;">
+            <img src="media/Dropbox_Icon.svg.png" alt="" style="width: 30px;">
             <label>Dropbox</label>
         </a>
 
