Adds links-styles.css file and changes index.html to use this .css file. Adds header. Little visual changes

--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/links-styles.css">
+    <title>Dorgam</title>
 </head>
 
-<body style="text-align: center;">
+<body class="body">
 
-    <p style="display: inline-block; width: fit-content; text-align: left;">
+    <header>
+        <h2 class="title">Useful links</h2>
+    </header>
 
-        <a href="https://stackoverflow.com/" style="display: block;">
-            <img src="media/stackoverflow-tile.svg" alt=""
-                style="width: 30px;">
-            <label>Stackoverflow</label>
-        </a>
-        <a href="https://google.com/" style="display: block;">
-            <img src="media/Google__G__Logo.svg.png"
-                alt="" style="width: 30px;">
-            <label>Google</label>
-        </a>
-        <a href="https://zoom.us/" style="display: block;">
-            <img src="media/Zoom-Logo-PNG-Photo.png" alt=""
-                style="width: 30px;">
-            <label>Zoom</label>
-        </a>
-        <a href="https://www.tel-ran.com/" style="display: block;">
-            <img src="media/telran.jpg" alt="" style="width: 30px;">
-            <label>Tel-Ran</label>
-        </a>
-        <a href="https://dropbox.com/" style="display: block;">
-            <img src="media/Dropbox_Icon.svg.png" alt="" style="width: 30px;">
-            <label>Dropbox</label>
-        </a>
+    <main class="main-content">
 
-    </p>
+        <p class="paragraph">
+
+            <a class="image-link" href="https://stackoverflow.com/">
+                <img class="image" src="media/stackoverflow-tile.svg" alt="">
+                <label class="text-link">Stackoverflow</label>
+            </a>
+            <a class="image-link" href="https://google.com/">
+                <img class="image" src="media/Google__G__Logo.svg.png" alt="">
+                <label class="text-link">Google</label>
+            </a>
+            <a class="image-link" href="https://zoom.us/">
+                <img class="image" src="media/Zoom-Logo-PNG-Photo.png" alt="">
+                <label class="text-link">Zoom</label>
+            </a>
+            <a class="image-link" href="https://www.tel-ran.com/">
+                <img class="image" src="media/telran.jpg" alt="">
+                <label class="text-link">Tel-Ran</label>
+            </a>
+            <a class="image-link" href="https://dropbox.com/">
+                <img class="image" src="media/Dropbox_Icon.svg.png" alt="">
+                <label class="text-link">Dropbox</label>
+            </a>
+
+        </p>
+
+    </main>
 
 </body>
 
